--- a/grumpling_dumplings/default.conf
+++ b/grumpling_dumplings/default.conf
@@ -2,24 +2,17 @@ server {
     listen 8080;
     server_name localhost;
 
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/dumpling;
     index index.html;
 
-    # Serve the dumpling site at /dumpling
-    location /dumpling {
-        alias /usr/share/nginx/html/dumpling;
-        try_files $uri $uri/ $uri.html /dumpling/index.html =404;
+    location / {
+        try_files $uri $uri/ $uri.html /index.html =404;
         
         # Cache static assets
         location ~* \.(png|jpg|jpeg|gif|ico|svg)$ {
             expires 30d;
             add_header Cache-Control "public, immutable";
         }
-    }
-
-    # Redirect /dumpling/ to /dumpling
-    location = /dumpling/ {
-        return 301 /dumpling;
     }
 
     # Health check endpoint
