--- a/grumpling_dumplings/frontend/default.conf
+++ b/grumpling_dumplings/frontend/default.conf
@@ -12,7 +12,7 @@ server {
     # Proxy API requests to the Backend Service
     # 'backend-service' is the name we will define in OpenShift later
     location /api/ {
-        proxy_pass http://127.0.0.1:3000/api/;
+        proxy_pass http://localhost:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
