--- a/grumpling_dumplings/frontend/default.conf
+++ b/grumpling_dumplings/frontend/default.conf
@@ -2,15 +2,14 @@ server {
     listen       8080;
     server_name  localhost;
 
-    # Serve your HTML and Images
+    # Serve HTML
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to the Backend Service
-    # 'backend-service' is the name we will define in OpenShift later
+    # Proxy API
     location /api/ {
         proxy_pass http://localhost:3000/api/;
         proxy_http_version 1.1;
@@ -18,5 +17,19 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    # --- NEW: Nginx Metrics Page ---
+    # Only allows access from localhost (the Metricbeat sidecar)
+    location /status {
+        stub_status on;
+        access_log off;
+        allow 127.0.0.1;
+        deny all;
+    }
+    
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
