--- a/grumpling_dumplings/deployment.yaml
+++ b/grumpling_dumplings/deployment.yaml
@@ -113,7 +113,7 @@ spec:
         args: [
           "-c", "/etc/metricbeat.yml", 
           "-e", 
-          "--strict.perms=false"
+          "--strict.perms=false"  # Required for OpenShift to accept the ConfigMap file
         ]
         resources:
           limits:
