--- a/grumpling_dumplings/deployment.yaml
+++ b/grumpling_dumplings/deployment.yaml
@@ -65,7 +65,7 @@ spec:
         env:
         - name: PORT
           value: "3000"
-        - name: DB_HOST
+        - name: DB_HOST        #Replace this with actual postgresql server
           value: "postgresql" 
         - name: DB_PORT
           value: "5432"
